--- a/pom.xml
+++ b/pom.xml
@@ -108,5 +108,11 @@
       <version>${powermock.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.23</version>
+      <scope>test</scope>
+    </dependency>    
   </dependencies>
 </project>
